EVEN MORE FUCKING RETTELSER

--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -1,7 +1,8 @@
 \chapter{Mechanical Design}\label{MechDesign}
-
-This chapter presents the final design of the turret, describes how the lego
-was tinkered with and how this process lead to the this design.
+This chapter presents the final design of the turret, and describes the process
+of building it using LEGO.
+% This chapter presents the final design of the turret,
+% describes how the LEGO was tinkered with and how this process lead to the this design.
 Finally the thoughts that went into the design of the target will be discussed.
 
 \input{sections/Design/TnTDesign/TurretDesign.tex}
