--- a/sections/Design/SystemArchitecture/HardwareArch.tex
+++ b/sections/Design/SystemArchitecture/HardwareArch.tex
@@ -1,6 +1,5 @@
 \section{Hardware Architecture}
-In the previous chapter the physical design of the turret was presented and
-explained. As such, this section will be used to present the technical aspects
+This section will be used to present the technical aspects
 of the turret design, namely the hardware architecture. The \name system makes
 use of a number of hardware components, which are used for varying
 functionality. These components are:
@@ -14,9 +13,9 @@ functionality. These components are:
 \end{itemize}
 
 In this setup all components are connected to the NXT Brick, and communicate
-through cables. A single servo motor is used to for the fireing mechanism, one
+through cables. A single servo motor is used for the firing mechanism, one
 is used to rotate the turret horizontally and one is used to angle the
-ball-launcer part of the turret. The ultrasonic sensors are used to gather data
+cannon. The ultrasonic sensors are used to gather data
 about the distance to the target, and the camera collects data about the
 relative position of a target within its vision. A view of the hardware
 components can be seen below in \autoref{HARCH}.
