--- a/sections/Implementation/NXCLang.tex
+++ b/sections/Implementation/NXCLang.tex
@@ -1,7 +1,7 @@
 \section{Programming Language}
 The software used in the \name project has been written in the language NXC,
 which is a domain specific language specialized for writing programs for the
-Lego NXT platform \cite{NXCIntro}. NXC is similar to the language C, and as such
+LEGO NXT platform \cite{NXCIntro}. NXC is similar to the language C, and as such
 uses many of the same constructs, including the imperative programming approach. As the
 language is domain specific, it comes with its own libraries and their
 respective documentation \cite{NXCIntro}. While NXC is similar to C, the main
@@ -32,6 +32,6 @@ task search(){
 \end{lstlisting}
 \end{minipage}
 
-As exemplified in \autoref{NXCExample} the NXC language is reminiscent of C, and
+As exemplified in \autoref{NXCExample} the NXC is a C like language, and
 the most notable differences come in the form of the inclusion of standard
 libraries, and specialized thread handling in the form of tasks.
