--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -1,8 +1,8 @@
 \chapter{Software Implementation}\label{ImplLabel}
 Following the turret design in \autoref{MechDesign} this chapter will be used to present and
 describe the final implementation of the software used in the \name turret. This will be done
-by looking at the main system components and the three main program threads:
-tracking, distance measurement and fireing.
+by looking at the main system components and the three main program tasks:
+\textbf{tracking}, \textbf{distance measurement} and \textbf{firing}.
 
 \input{sections/Implementation/NXCLang.tex}
 %\input{sections/Implementation/SoftwareHierachy.tex}
